// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config:nuxt advanced 1`] = `
Object {
  "axios": Object {
    "browserBaseURL": "/",
  },
  "babel": Object {
    "plugins": Array [
      "@babel/transform-runtime",
    ],
  },
  "build": Object {
    "analyze": true,
    "extend": [Function],
    "plugins": Array [
      Object {
        "apply": [Function],
      },
    ],
    "publicPath": "/static/",
    "router": Object {
      "linkActiveClass": "active",
      "linkExactActiveClass": "exact",
      "scrollBehavior": [Function],
    },
  },
  "buildDir": "../.tmp/advanced/.statusfy",
  "css": Array [
    "~assets/css/tailwind.css",
    "@fortawesome/fontawesome-svg-core/styles.css",
    "../.tmp/advanced/theme/default/style.css",
    "../.tmp/advanced/theme/default/style.less",
    "../.tmp/advanced/theme/default/style.sass",
    "../.tmp/advanced/theme/default/style.scss",
    "../.tmp/advanced/theme/default/style.styl",
    "../.tmp/advanced/theme/default/style.stylus",
  ],
  "dev": true,
  "env": Object {
    "isDev": true,
  },
  "generate": Object {
    "dir": "../.tmp/advanced/dist"
  },
  "head": Object {
    "link": Array [
      Object {
        "color": "#3e4e88",
        "href": "/icons/safari-pinned-tab.svg",
        "rel": "mask-icon",
      },
    ],
    "meta": Array [
      Object {
        "charset": "utf-8",
      },
      Object {
        "content": "width=device-width, initial-scale=1",
        "name": "viewport",
      },
      Object {
        "content": "Statusfy",
        "name": "generator",
      },
      Object {
        "content": "Description",
        "hid": "description",
        "name": "description",
      },
    ],
    "title": "Long Title",
    "titleTemplate": "%s | Long Title",
  },
  "icon": Object {
    "iconSrc": "../.tmp/advanced/theme/default/img/icon.png",
    "sizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
  },
  "loading": Object {
    "color": "#1b1f23",
  },
  "manifest": Object {
    "description": "Description",
    "lang": "en",
    "name": "Long Title",
    "publicPath": "/static/",
    "short_name": "Short Title",
    "start_url": "/?standalone=true&utm_source=web_app&utm_medium=pwa",
    "version": "0.3.0-alpha.1",
  },
  "meta": Object {
    "author": "Statusfy",
    "charset": "utf-8",
    "mobileApp": false,
    "mobileAppIOS": false,
    "ogDescription": false,
    "ogHost": "https://demo.statusfy.co",
    "ogTitle": false,
    "theme_color": "#1b1f23",
  },
  "mode": "universal",
  "modules": Array [
    "~/modules/statusfy",
    "@nuxtjs/axios",
    Array [
      "nuxt-i18n",
      Object {
        "baseUrl": "https://demo.statusfy.co",
        "defaultLocale": "en",
        "detectBrowserLanguage": Object {
          "cookieKey": "app_name.lang_redirected",
          "useCookie": true,
        },
        "langDir": "locales/",
        "lazy": true,
        "locales": Array [
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
          Object {
            "code": "es",
            "file": "es.js",
            "iso": "es-ES",
            "name": "Español",
          },
        ],
        "seo": false,
        "vueI18n": Object {
          "fallbackLocale": "en",
          "silentTranslationWarn": false,
        },
      },
    ],
    Array [
      "@nuxtjs/pwa",
      Object {
        "manifest": false,
        "workbox": false,
      },
    ],
  ],
  "modulesDir": Array [
    "../../node_modules",
    "../../../node_modules",
    "../.tmp/simple/node_modules",
    "../.tmp/cli/node_modules",
    "../.tmp/advanced/node_modules",
  ],
  "plugins": Array [
    "~/plugins/axios",
    "~/plugins/vue-svgicon",
  ],
  "rootDir": "../..",
  "server": Object {
    "host": "127.0.0.1",
    "port": 3000,
  },
  "srcDir": "../../client",
  "statusfy": Object {
    "assets": Object {
      "mainLogo": "../.tmp/advanced/theme/default/img/logo.svg",
    },
    "dev": true,
    "iconSizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
    "langDir": "locales/",
    "locales": Array [
      Object {
        "code": "en",
        "iso": "en-US",
        "name": "English",
      },
      Object {
        "code": "es",
        "iso": "es-ES",
        "name": "Español",
      },
    ],
    "publicFilesPath": "../.tmp/advanced/public",
    "siteConfig": Object {
      "analytics": Object {
        "ga": "UA-XXXXXXXXX-Y",
      },
      "baseUrl": "https://demo.statusfy.co",
      "build": Object {
        "isStatic": false,
      },
      "content": Object {
        "dir": "content",
        "frontMatterFormat": "yaml",
        "systems": Array [
          "cdn",
          "conversions",
          "site-delivery",
          "api",
        ],
      },
      "defaultLocale": "en",
      "description": "Description",
      "head": Object {
        "link": Array [
          Object {
            "color": "#3e4e88",
            "href": "/icons/safari-pinned-tab.svg",
            "rel": "mask-icon",
          },
        ],
        "meta": Array [
          Object {
            "charset": "utf-8",
          },
          Object {
            "content": "width=device-width, initial-scale=1",
            "name": "viewport",
          },
          Object {
            "content": "Statusfy",
            "name": "generator",
          },
          Object {
            "content": "Description",
            "hid": "description",
            "name": "description",
          },
        ],
        "title": "Long Title",
        "titleTemplate": "%s | Long Title",
      },
      "locales": Array [
        Object {
          "code": "en",
          "iso": "en-US",
          "name": "English",
        },
        Object {
          "code": "es",
          "iso": "es-ES",
          "name": "Español",
        },
      ],
      "manifest": true,
      "name": "app_name",
      "notifications": Object {
        "feeds": true,
        "icalendar": true,
        "support": false,
        "twitter": false,
      },
      "serviceWorker": true,
      "short_title": "Short Title",
      "sourceDir": "../.tmp/advanced",
      "theme": Object {},
      "title": "Long Title",
    },
    "sourceDir": "../.tmp/advanced",
    "version": "0.3.0-alpha.1",
  },
  "workbox": Object {
    "_runtimeCaching": Array [
      Object {
        "handler": "cacheFirst",
        "method": "GET",
        "urlPattern": "/static/(?!content).*$",
      },
    ],
    "cacheId": "app_name",
    "globDirectory": "../.tmp/advanced/.statusfy/dist/client",
    "offlinePage": "/offline",
    "publicPath": "/static/",
    "runtimeCaching": Array [
      Object {
        "strategyOptions": Object {
          "cacheExpiration": Object {
            "maxAgeSeconds": 300,
            "maxEntries": 10,
          },
          "cacheName": "app_name_title_api",
        },
        "urlPattern": "(/static/content)?/api/v0/.*",
      },
    ],
  },
}
`;

exports[`config:nuxt cli 1`] = `
Object {
  "axios": Object {
    "browserBaseURL": "/",
  },
  "babel": Object {
    "plugins": Array [
      "@babel/transform-runtime",
    ],
  },
  "build": Object {
    "analyze": true,
    "extend": [Function],
    "plugins": Array [
      Object {
        "apply": [Function],
      },
    ],
    "publicPath": "/static/",
    "router": Object {
      "linkActiveClass": "active",
      "linkExactActiveClass": "exact",
      "scrollBehavior": [Function],
    },
  },
  "buildDir": "../.tmp/cli/.statusfy",
  "css": Array [
    "~assets/css/tailwind.css",
    "@fortawesome/fontawesome-svg-core/styles.css",
  ],
  "dev": true,
  "env": Object {
    "isDev": true,
  },
  "generate": Object {
    "dir": "../.tmp/cli/dist"
  },
  "head": Object {
    "meta": Array [
      Object {
        "charset": "utf-8",
      },
      Object {
        "content": "width=device-width, initial-scale=1",
        "name": "viewport",
      },
      Object {
        "content": "Statusfy",
        "name": "generator",
      },
      Object {
        "content": "",
        "hid": "description",
        "name": "description",
      },
    ],
    "title": "Title",
    "titleTemplate": "%s | Title",
  },
  "icon": Object {
    "iconSrc": "../../client/static/icon.png",
    "sizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
  },
  "loading": Object {
    "color": "#1b1f23",
  },
  "manifest": Object {
    "description": "",
    "lang": "en",
    "name": "Title",
    "publicPath": "/static/",
    "short_name": "Title",
    "start_url": "/?standalone=true&utm_source=web_app&utm_medium=pwa",
    "version": "0.3.0-alpha.1",
  },
  "meta": Object {
    "author": "Statusfy",
    "charset": "utf-8",
    "mobileApp": false,
    "mobileAppIOS": false,
    "ogDescription": false,
    "ogHost": "/",
    "ogTitle": false,
    "theme_color": "#1b1f23",
  },
  "mode": "universal",
  "modules": Array [
    "~/modules/statusfy",
    "@nuxtjs/axios",
    Array [
      "nuxt-i18n",
      Object {
        "baseUrl": null,
        "defaultLocale": "en",
        "detectBrowserLanguage": Object {
          "cookieKey": "title.lang_redirected",
          "useCookie": true,
        },
        "langDir": "locales/",
        "lazy": true,
        "locales": Array [
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
        ],
        "seo": false,
        "vueI18n": Object {
          "fallbackLocale": "en",
          "silentTranslationWarn": false,
        },
      },
    ],
    Array [
      "@nuxtjs/pwa",
      Object {
        "manifest": false,
        "workbox": false,
      },
    ],
  ],
  "modulesDir": Array [
    "../../node_modules",
    "../../../node_modules",
    "../.tmp/simple/node_modules",
    "../.tmp/cli/node_modules",
  ],
  "plugins": Array [
    "~/plugins/axios",
    "~/plugins/vue-svgicon",
  ],
  "rootDir": "../..",
  "server": Object {
    "host": "127.0.0.1",
    "port": 3000,
  },
  "srcDir": "../../client",
  "statusfy": Object {
    "assets": Object {
      "mainLogo": "../../client/assets/img/logo.svg",
    },
    "dev": true,
    "iconSizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
    "langDir": "locales/",
    "locales": Array [
      Object {
        "code": "en",
        "iso": "en-US",
        "name": "English",
      },
    ],
    "publicFilesPath": "../.tmp/cli/public",
    "siteConfig": Object {
      "baseUrl": "/",
      "build": Object {
        "isStatic": false,
      },
      "content": Object {
        "dir": "content",
        "systems": Array [
          "api",
          "cdn",
          "dns",
          "site-delivery",
        ],
      },
      "defaultLocale": "en",
      "description": "",
      "locales": Array [
        Object {
          "code": "en",
          "iso": "en-US",
          "name": "English",
        },
      ],
      "manifest": true,
      "name": "title",
      "notifications": Object {
        "feeds": true,
        "icalendar": true,
        "support": false,
        "twitter": false,
      },
      "serviceWorker": true,
      "short_title": "Title",
      "sourceDir": "../.tmp/cli",
      "theme": Object {},
      "title": "Title",
    },
    "sourceDir": "../.tmp/cli",
    "version": "0.3.0-alpha.1",
  },
  "workbox": Object {
    "_runtimeCaching": Array [
      Object {
        "handler": "cacheFirst",
        "method": "GET",
        "urlPattern": "/static/(?!content).*$",
      },
    ],
    "cacheId": "title",
    "globDirectory": "../.tmp/cli/.statusfy/dist/client",
    "offlinePage": "/offline",
    "publicPath": "/static/",
    "runtimeCaching": Array [
      Object {
        "strategyOptions": Object {
          "cacheExpiration": Object {
            "maxAgeSeconds": 300,
            "maxEntries": 10,
          },
          "cacheName": "title_api",
        },
        "urlPattern": "(/static/content)?/api/v0/.*",
      },
    ],
  },
}
`;

exports[`config:nuxt simple 1`] = `
Object {
  "axios": Object {
    "browserBaseURL": "/",
  },
  "babel": Object {
    "plugins": Array [
      "@babel/transform-runtime",
    ],
  },
  "build": Object {
    "analyze": true,
    "extend": [Function],
    "plugins": Array [
      Object {
        "apply": [Function],
      },
    ],
    "publicPath": "/static/",
    "router": Object {
      "linkActiveClass": "active",
      "linkExactActiveClass": "exact",
      "scrollBehavior": [Function],
    },
  },
  "buildDir": "../.tmp/simple/.statusfy",
  "css": Array [
    "~assets/css/tailwind.css",
    "@fortawesome/fontawesome-svg-core/styles.css",
  ],
  "dev": true,
  "env": Object {
    "isDev": true,
  },
  "generate": Object {
    "dir": "../.tmp/simple/dist"
  },
  "head": Object {
    "meta": Array [
      Object {
        "charset": "utf-8",
      },
      Object {
        "content": "width=device-width, initial-scale=1",
        "name": "viewport",
      },
      Object {
        "content": "Statusfy",
        "name": "generator",
      },
      Object {
        "content": "",
        "hid": "description",
        "name": "description",
      },
    ],
    "title": "Title",
    "titleTemplate": "%s | Title",
  },
  "icon": Object {
    "iconSrc": "../../client/static/icon.png",
    "sizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
  },
  "loading": Object {
    "color": "#1b1f23",
  },
  "meta": Object {
    "author": "Statusfy",
    "charset": "utf-8",
    "mobileApp": false,
    "mobileAppIOS": false,
    "ogDescription": false,
    "ogHost": "/simple",
    "ogTitle": false,
    "theme_color": "#1b1f23",
  },
  "mode": "universal",
  "modules": Array [
    "~/modules/statusfy",
    "@nuxtjs/axios",
    Array [
      "nuxt-i18n",
      Object {
        "baseUrl": "/simple",
        "defaultLocale": "en",
        "detectBrowserLanguage": Object {
          "cookieKey": "title.lang_redirected",
          "useCookie": true,
        },
        "langDir": "locales/",
        "lazy": true,
        "locales": Array [
          Object {
            "code": "en",
            "file": "en.js",
            "iso": "en-US",
            "name": "English",
          },
        ],
        "seo": false,
        "vueI18n": Object {
          "fallbackLocale": "en",
          "silentTranslationWarn": false,
        },
      },
    ],
    Array [
      "@nuxtjs/pwa",
      Object {
        "manifest": false,
        "workbox": false,
      },
    ],
  ],
  "modulesDir": Array [
    "../../node_modules",
    "../../../node_modules",
    "../.tmp/simple/node_modules",
  ],
  "plugins": Array [
    "~/plugins/axios",
    "~/plugins/vue-svgicon",
  ],
  "rootDir": "../..",
  "server": Object {
    "host": "127.0.0.1",
    "port": 3000,
  },
  "srcDir": "../../client",
  "statusfy": Object {
    "assets": Object {
      "mainLogo": "../../client/assets/img/logo.svg",
    },
    "dev": true,
    "iconSizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
    "langDir": "locales/",
    "locales": Array [
      Object {
        "code": "en",
        "iso": "en-US",
        "name": "English",
      },
    ],
    "publicFilesPath": null,
    "siteConfig": Object {
      "baseUrl": "/simple",
      "build": Object {
        "isStatic": false,
      },
      "content": Object {
        "dir": "content",
        "systems": Array [
          "api",
          "cdn",
          "dns",
          "site-delivery",
        ],
      },
      "defaultLocale": "en",
      "description": "",
      "locales": Array [
        Object {
          "code": "en",
          "iso": "en-US",
          "name": "English",
        },
      ],
      "manifest": false,
      "name": "title",
      "notifications": false,
      "serviceWorker": false,
      "short_title": "Title",
      "sourceDir": "../.tmp/simple",
      "theme": Object {},
      "title": "Title",
    },
    "sourceDir": "../.tmp/simple",
    "version": "0.3.0-alpha.1",
  },
}
`;

exports[`config:nuxt spanish 1`] = `
Object {
  "axios": Object {
    "browserBaseURL": "/",
  },
  "babel": Object {
    "plugins": Array [
      "@babel/transform-runtime",
    ],
  },
  "build": Object {
    "analyze": true,
    "extend": [Function],
    "plugins": Array [
      Object {
        "apply": [Function],
      },
    ],
    "publicPath": "/static/",
    "router": Object {
      "linkActiveClass": "active",
      "linkExactActiveClass": "exact",
      "scrollBehavior": [Function],
    },
  },
  "buildDir": "../.tmp/spanish/.statusfy",
  "css": Array [
    "~assets/css/tailwind.css",
    "@fortawesome/fontawesome-svg-core/styles.css",
    "../.tmp/advanced/theme/default/style.css",
    "../.tmp/advanced/theme/default/style.less",
    "../.tmp/advanced/theme/default/style.sass",
    "../.tmp/advanced/theme/default/style.scss",
    "../.tmp/advanced/theme/default/style.styl",
    "../.tmp/advanced/theme/default/style.stylus",
  ],
  "dev": true,
  "env": Object {
    "isDev": true,
  },
  "generate": Object {
    "dir": "../.tmp/spanish/dist"
  },
  "head": Object {
    "meta": Array [
      Object {
        "charset": "utf-8",
      },
      Object {
        "content": "width=device-width, initial-scale=1",
        "name": "viewport",
      },
      Object {
        "content": "Statusfy",
        "name": "generator",
      },
      Object {
        "content": "Descripción",
        "hid": "description",
        "name": "description",
      },
    ],
    "title": "Título",
    "titleTemplate": "%s | Título",
  },
  "icon": Object {
    "iconSrc": "../.tmp/advanced/theme/default/img/icon.png",
    "sizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
  },
  "loading": Object {
    "color": "#1b1f23",
  },
  "manifest": Object {
    "description": "Descripción",
    "lang": "es",
    "name": "Título",
    "publicPath": "/static/",
    "short_name": "Título",
    "start_url": "/?standalone=true&utm_source=web_app&utm_medium=pwa",
    "version": "0.3.0-alpha.1",
  },
  "meta": Object {
    "author": "Statusfy",
    "charset": "utf-8",
    "mobileApp": false,
    "mobileAppIOS": false,
    "ogDescription": false,
    "ogHost": "https://demo.statusfy.co/es",
    "ogTitle": false,
    "theme_color": "#1b1f23",
  },
  "mode": "universal",
  "modules": Array [
    "~/modules/statusfy",
    "@nuxtjs/axios",
    Array [
      "nuxt-i18n",
      Object {
        "baseUrl": "https://demo.statusfy.co/es",
        "defaultLocale": "es",
        "detectBrowserLanguage": Object {
          "cookieKey": "Nombre Aplicación.lang_redirected",
          "useCookie": true,
        },
        "langDir": "locales/",
        "lazy": true,
        "locales": Array [
          Object {
            "code": "es",
            "file": "es.js",
            "iso": "es-ES",
            "name": "Español",
          },
          Object {
            "code": "fr",
            "file": "fr.js",
            "iso": "fr-FR",
            "name": "Français",
          },
        ],
        "seo": false,
        "vueI18n": Object {
          "fallbackLocale": "es",
          "silentTranslationWarn": false,
        },
      },
    ],
    Array [
      "@nuxtjs/pwa",
      Object {
        "manifest": false,
        "workbox": false,
      },
    ],
  ],
  "modulesDir": Array [
    "../../node_modules",
    "../../../node_modules",
    "../.tmp/simple/node_modules",
    "../.tmp/cli/node_modules",
    "../.tmp/advanced/node_modules",
    "../.tmp/spanish/node_modules",
  ],
  "plugins": Array [
    "~/plugins/axios",
    "~/plugins/vue-svgicon",
  ],
  "rootDir": "../..",
  "server": Object {
    "host": "127.0.0.1",
    "port": 3000,
  },
  "srcDir": "../../client",
  "statusfy": Object {
    "assets": Object {
      "mainLogo": "../.tmp/advanced/theme/default/img/logo.svg",
    },
    "dev": true,
    "iconSizes": Array [
      16,
      120,
      144,
      152,
      192,
      384,
      512,
    ],
    "langDir": "locales/",
    "locales": Array [
      Object {
        "code": "es",
        "iso": "es-ES",
        "name": "Español",
      },
      Object {
        "code": "fr",
        "iso": "fr-FR",
        "name": "Français",
      },
    ],
    "publicFilesPath": "../.tmp/spanish/public",
    "siteConfig": Object {
      "baseUrl": "https://demo.statusfy.co/es",
      "build": Object {
        "isStatic": false,
      },
      "content": Object {
        "dir": "content",
        "frontMatterFormat": "yaml",
        "systems": Array [
          "notificaciones",
          "monitoreo",
          "entrega-sitio",
        ],
      },
      "defaultLocale": "es",
      "description": "Descripción",
      "locales": Array [
        Object {
          "code": "es",
          "iso": "es-ES",
          "name": "Español",
        },
        Object {
          "code": "fr",
          "iso": "fr-FR",
          "name": "Français",
        },
      ],
      "manifest": true,
      "name": "Nombre Aplicación",
      "notifications": Object {
        "feeds": true,
        "icalendar": true,
        "support": false,
        "twitter": false,
      },
      "serviceWorker": true,
      "short_title": "Título",
      "sourceDir": "../.tmp/spanish",
      "theme": Object {},
      "title": "Título",
    },
    "sourceDir": "../.tmp/spanish",
    "version": "0.3.0-alpha.1",
  },
  "workbox": Object {
    "_runtimeCaching": Array [
      Object {
        "handler": "cacheFirst",
        "method": "GET",
        "urlPattern": "/static/(?!content).*$",
      },
    ],
    "cacheId": "Nombre Aplicación",
    "globDirectory": "../.tmp/spanish/.statusfy/dist/client",
    "offlinePage": "/offline",
    "publicPath": "/static/",
    "runtimeCaching": Array [
      Object {
        "strategyOptions": Object {
          "cacheExpiration": Object {
            "maxAgeSeconds": 300,
            "maxEntries": 10,
          },
          "cacheName": "Nombre Aplicación_app_name_title_api",
        },
        "urlPattern": "(/static/content)?/api/v0/.*",
      },
    ],
  },
}
`;
